--- a/BluffDice/wwwroot/Index.html
+++ b/BluffDice/wwwroot/Index.html
@@ -80,8 +80,8 @@
                             $scope.dice = '你的骰子: ' + card;
                             $scope.$apply();
                             break;
-                        case 'WaitBluff':
-                            $scope.text = '該你吹牛了';
+                        case 'WaitFirstBluff':
+                            $scope.text = '你先吹牛';
                             $scope.$apply();
                             break;
                         case 'BluffSuccess': break;
